refactor package and depedencies
