# docs/swagger.json
@@ -106,16 +106,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/dto.RestResponse"
+                                    "$ref": "#/definitions/dto.SuccessResponseForSwaggerDocs"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/dto.PublicData"
-                                        },
-                                        "errors": {
-                                            "$ref": "#/definitions/dto.Error"
                                         }
                                     }
                                 }
@@ -125,7 +122,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrResponseForSwaggerDocsOnly"
+                            "$ref": "#/definitions/dto.ErrResponseForSwaggerDocs"
                         }
                     }
                 }
@@ -229,7 +226,7 @@
         }
     },
     "definitions": {
-        "dto.ErrResponseForSwaggerDocsOnly": {
+        "dto.ErrResponseForSwaggerDocs": {
             "type": "object",
             "properties": {
                 "code": {
@@ -264,13 +261,11 @@
         "dto.Error": {
             "type": "object",
             "properties": {
-                "fieldError": {
-                    "type": "string",
-                    "example": "publicName is required"
-                },
                 "fieldName": {
-                    "type": "string",
-                    "example": "publicName"
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
                 }
             }
         },
@@ -327,25 +322,26 @@
             "type": "object",
             "properties": {
                 "code": {
-                    "type": "string",
-                    "example": "200"
+                    "type": "string"
                 },
                 "data": {},
+                "errors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.Error"
+                    }
+                },
                 "message": {
-                    "type": "string",
-                    "example": "Success"
+                    "type": "string"
                 },
                 "requestTime": {
-                    "type": "string",
-                    "example": "2010-01-25T13:00:00"
+                    "type": "string"
                 },
                 "responseTime": {
-                    "type": "string",
-                    "example": "2010-01-25T13:00:00"
+                    "type": "string"
                 },
                 "status": {
-                    "type": "string",
-                    "example": "OK"
+                    "type": "string"
                 }
             }
         },
@@ -381,6 +377,32 @@
                     "maxLength": 16,
                     "minLength": 4,
                     "example": "Nama Publik"
+                }
+            }
+        },
+        "dto.SuccessResponseForSwaggerDocs": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string",
+                    "example": "000"
+                },
+                "data": {},
+                "message": {
+                    "type": "string",
+                    "example": "SUCCESS"
+                },
+                "requestTime": {
+                    "type": "string",
+                    "example": "2010-01-25T13:00:00"
+                },
+                "responseTime": {
+                    "type": "string",
+                    "example": "2010-01-25T13:00:00"
+                },
+                "status": {
+                    "type": "string",
+                    "example": "SUCCESS"
                 }
             }
         }
